--- a/css/customizer.css
+++ b/css/customizer.css
@@ -3,8 +3,12 @@
  *
  */
 
+#customize-control-glades_control_postmeta_headline {
+	margin-top: 12px;
+}
 #customize-control-glades_control_header_content,
-#customize-control-glades_control_post_images {
+#customize-control-glades_control_post_images,
+#customize-control-glades_control_postmeta_headline {
 	margin-bottom: 0;
 }
 
