--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Glades
 Theme URI: http://themezee.com/themes/glades/
 Description: Glades is a modern Magazine Theme for a local news or any other content focused website. The magazine-styled homepage is built with WordPress core features like Customizer and Widgets, which makes the setup super fast, flexible and easy. The theme comes with a beautiful Featured Content area and responsive design, looking great on every device.
-Version: 1.0.4
+Version: 1.0.5
 Author: ThemeZee
 Author URI: http://themezee.com
 Tags: two-columns, light, blue, custom-background, custom-header, custom-menu, editor-style, featured-image-header, featured-images, flexible-header, custom-colors, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, red, silver, white, green, gray
@@ -766,13 +766,13 @@ input, textarea, select {
 }
 
 /* Archives and Search Heading */
-.archive-title {
+.page-header {
 	margin-bottom: 2em;
 	border-bottom: 3px solid #1188cc;
 	-ms-word-wrap: break-word;
 	word-wrap: break-word;
 }
-.archive-title  span {
+.page-header .archive-title {
 	display: inline-block;
 	font-family: 'Contrail One', Tahoma, Arial;
 	font-size: 0.95em;
