--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Glades
 Theme URI: http://themezee.com/themes/glades/
 Description: Glades is a modern Magazine Theme for a local news or any other content focused website. The magazine-styled homepage is built with WordPress core features like Customizer and Widgets, which makes the setup super fast, flexible and easy. The theme comes with a beautiful Featured Content area and responsive design, looking great on every device.
-Version: 1.0.5
+Version: 1.0.6
 Author: ThemeZee
 Author URI: http://themezee.com
 Tags: two-columns, light, blue, custom-background, custom-header, custom-menu, editor-style, featured-image-header, featured-images, flexible-header, custom-colors, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, red, silver, white, green, gray
@@ -57,7 +57,7 @@ html {
 	font-size: 100.01%;
 }
 body {
-	font-family: 'PT Sans', 'Times New Roman', Tahoma;
+	font-family: 'PT Sans', Arial, Verdana;
 	font-size: 1.05em;
 	border: 0;
 	color: #111;
@@ -80,7 +80,7 @@ input, textarea {
 	border: 2px solid #ddd;
 	font-size: 1.0em;
 	color: #222;
-	font-family: 'PT Sans', 'Times New Roman', Tahoma;
+	font-family: 'PT Sans', Arial, Verdana;
 }
 input[type="submit"] {
 	display: inline-block;
@@ -167,7 +167,7 @@ input, textarea, select {
 }
 #topnav-menu a {
 	display: block;
-	font-family: 'PT Sans', 'Times New Roman', Tahoma;
+	font-family: 'PT Sans', Arial, Verdana;
 	font-size: 0.8em;
 	padding: 1em;
 	text-decoration: none;
