added postmeta settings to Category Post widgets

--- a/css/themezee-widget-bundle.css
+++ b/css/themezee-widget-bundle.css
@@ -412,40 +412,9 @@
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*--------------------------------------------------------------
+# Widget Styling in Footer area
+---------------------------------------------------------------- */
 #footer-widgets .tzwb-recent-posts .tzwb-posts-list li:before,
 #footer-widgets .tzwb-posts-list .tzwb-postmeta,
 #footer-widgets .tzwb-posts-list .tzwb-postmeta span:before,
