fixed postmeta styling for widget bundle

--- a/css/themezee-widget-bundle.css
+++ b/css/themezee-widget-bundle.css
@@ -73,17 +73,17 @@
 	display: none;
 }
 
-.tzwb-posts-list .tzwb-postmeta {
+.tzwb-posts-list .tzwb-entry-meta {
 	margin: 0.1em 0 0;
 	font-size: 0.85em;
 	color: #888;
 }
 
-.tzwb-posts-list .tzwb-postmeta span {
+.tzwb-posts-list .tzwb-entry-meta span {
 	margin-right: 0.4em;
 }
 
-.tzwb-posts-list .tzwb-postmeta span:before {
+.tzwb-posts-list .tzwb-entry-meta span:before {
 	display: inline-block;
 	-webkit-font-smoothing: antialiased;
 	font: normal 16px 'Genericons';
@@ -92,16 +92,16 @@
 	margin: 0.25em 0 0 0;
 }
 
-.tzwb-posts-list .tzwb-postmeta .tzwb-meta-date:before{
+.tzwb-posts-list .tzwb-entry-meta .tzwb-meta-date:before{
 	content: '\f307';
 	margin-right: 0.2em;
 }
 
-.tzwb-posts-list .tzwb-postmeta .tzwb-meta-author:before{
+.tzwb-posts-list .tzwb-entry-meta .tzwb-meta-author:before{
 	content: '\f304';
 }
 
-.tzwb-posts-list .tzwb-postmeta .tzwb-meta-comments:before{
+.tzwb-posts-list .tzwb-entry-meta .tzwb-meta-comments:before{
 	content: '\f300';
 }
 
@@ -232,7 +232,7 @@
 	margin: 0.3em 0.8em 0.3em 0;
 }
 
-.tzwb-tabbed-content .tzwb-tabcontent ul li .tzwb-postmeta {
+.tzwb-tabbed-content .tzwb-tabcontent ul li .tzwb-entry-meta {
 	margin: 0.1em 0 0;
 	font-size: 0.85em;
 	color: #888;
@@ -416,8 +416,8 @@
 # Widget Styling in Footer area
 ---------------------------------------------------------------- */
 #footer-widgets .tzwb-recent-posts .tzwb-posts-list li:before,
-#footer-widgets .tzwb-posts-list .tzwb-postmeta,
-#footer-widgets .tzwb-posts-list .tzwb-postmeta span:before,
+#footer-widgets .tzwb-posts-list .tzwb-entry-meta,
+#footer-widgets .tzwb-posts-list .tzwb-entry-meta span:before,
 #footer-widgets .tzwb-recent-comments .tzwb-comments-list li:before, 
 #footer-widgets .tzwb-comments-list .tzwb-comment-date {
 	color: #eee;
@@ -451,7 +451,7 @@
 	background: rgba(255, 255, 255, 0.2);
 }
 
-#footer-widgets .tzwb-tabbed-content .tzwb-tabcontent ul li .tzwb-postmeta,
+#footer-widgets .tzwb-tabbed-content .tzwb-tabcontent ul li .tzwb-entry-meta,
 #footer-widgets .tzwb-tabbed-content .tzwb-tabcontent .tzwb-tabcontent-archives li,
 #footer-widgets .tzwb-tabbed-content .tzwb-tabcontent .tzwb-tabcontent-categories li,
 #footer-widgets .tzwb-tabbed-content .tzwb-tabcontent .tzwb-tabcontent-archives li a:before,
