--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Glades
 Theme URI: http://themezee.com/themes/glades/
 Description: Glades is a modern Magazine Theme for a local news or any other content focused website. The magazine-styled homepage is built with WordPress core features like Customizer and Widgets, which makes the setup super fast, flexible and easy. The theme comes with a beautiful Featured Content area and responsive design, looking great on every device.
-Version: 1.1.2
+Version: 1.1.3
 Author: ThemeZee
 Author URI: http://themezee.com
 Tags: two-columns, light, blue, custom-background, custom-header, custom-menu, editor-style, featured-image-header, featured-images, flexible-header, custom-colors, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, red, silver, white, green, gray
@@ -634,7 +634,7 @@ input, textarea, select {
 .type-post, .type-page, .type-attachment  {
 	margin: 0 0 2em 0;
 }
-.page-title, .post-title {
+.page-title, .entry-title {
 	font-size: 2.5em;
 	font-family: 'Contrail One', Tahoma, Arial;
 	padding: 0.1em 0;
@@ -647,14 +647,14 @@ input, textarea, select {
 	color: #333;
 	border-bottom: 3px solid #333;
 }
-.post-title {
+.entry-title {
 	border-bottom: 3px solid #1188cc;
 }
-.post-title a:link, .post-title a:visited {
+.entry-title a:link, .entry-title a:visited {
 	color: #1188cc;
 	text-decoration: none;
 }
-.post-title a:hover, .post-title a:active{
+.entry-title a:hover, .entry-title a:active{
 	color: #222;
 }
 .sticky {
@@ -1399,15 +1399,15 @@ embed, iframe, object, video {
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
-#featured-content .type-post .post-content .post-title {
+#featured-content .type-post .post-content .entry-title {
 	color: #fff;
 	border-bottom: 3px solid #fff;
 	text-shadow: 1px 1px 5px #000;
 }
-#featured-content .type-post .post-content .post-title a:link, #featured-content .type-post .post-content .post-title a:visited {
+#featured-content .type-post .post-content .entry-title a:link, #featured-content .type-post .post-content .entry-title a:visited {
 	color: #fff;
 }
-#featured-content .type-post .post-content .post-title a:hover, #featured-content .type-post .post-content .post-title a:active{
+#featured-content .type-post .post-content .entry-title a:hover, #featured-content .type-post .post-content .entry-title a:active{
 	color: #ddd;
 }
 #featured-content .type-post .post-content .postmeta {
@@ -1429,7 +1429,7 @@ embed, iframe, object, video {
 #featured-content .featured-content-right .type-post .post-content {
 	padding: 0.5em 1em;
 }
-#featured-content .featured-content-right .type-post .post-content .post-title {
+#featured-content .featured-content-right .type-post .post-content .entry-title {
 	font-size: 1.5em;
 	border: none;
 }
@@ -1471,7 +1471,7 @@ embed, iframe, object, video {
 .widget-category-posts .type-post .more-link:hover, .widget-category-posts .type-post .more-link:active  {
 	text-decoration: none;
 }
-.widget-category-posts .large-post .post-title {
+.widget-category-posts .large-post .entry-title {
 	font-size: 1.6em;
 }
 .widget-category-posts .large-post .wp-post-image {
@@ -1489,7 +1489,7 @@ embed, iframe, object, video {
 .widget-category-posts .medium-post .wp-post-image {
 	margin: 0 0 0.2em 0;
 }
-.widget-category-posts .medium-post .post-title {
+.widget-category-posts .medium-post .entry-title {
 	font-size: 1.25em;
 }
 .widget-category-posts .medium-post .postmeta, .widget-category-posts .small-post .postmeta {
@@ -1525,7 +1525,7 @@ embed, iframe, object, video {
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
-.widget-category-posts .small-post .post-title {
+.widget-category-posts .small-post .entry-title {
 	font-size: 1.1em;
 }
 .widget-category-posts .small-post .postmeta {
@@ -1657,7 +1657,7 @@ embed, iframe, object, video {
 	#featured-content .featured-content-right {
 		width: 33.3%;
 	}
-	#featured-content .featured-content-right .type-post .post-content .post-title {
+	#featured-content .featured-content-right .type-post .post-content .entry-title {
 		font-size: 1.4em;
 	}
 	
@@ -1678,7 +1678,7 @@ embed, iframe, object, video {
 	#mainnav-menu a {
 		padding: 1.8em 1.2em;
 	}
-	.page-title, .post-title{
+	.page-title, .entry-title{
 		font-size: 2.4em;
 	}
 	
@@ -1688,17 +1688,17 @@ embed, iframe, object, video {
 	#featured-content .featured-content-right {
 		width: 33%;
 	}
-	#featured-content .featured-content-right .type-post .post-content .post-title {
+	#featured-content .featured-content-right .type-post .post-content .entry-title {
 		font-size: 1.3em;
 	}
 
-	.widget-category-posts .large-post .post-title {
+	.widget-category-posts .large-post .entry-title {
 		font-size: 1.5em;
 	}
-	.widget-category-posts .medium-post .post-title {
+	.widget-category-posts .medium-post .entry-title {
 		font-size: 1.15em;
 	}
-	.widget-category-posts .small-post .post-title {
+	.widget-category-posts .small-post .entry-title {
 		font-size: 1.0em;
 	}
 }
@@ -1717,7 +1717,7 @@ embed, iframe, object, video {
 	.type-post, .type-page, .type-attachment, .widget  {
 		margin: 0 0 1.5em 0;
 	}
-	#featured-content .featured-content-right .type-post .post-content .post-title {
+	#featured-content .featured-content-right .type-post .post-content .entry-title {
 		font-size: 1.2em;
 	}
 	
@@ -1756,14 +1756,14 @@ embed, iframe, object, video {
 		padding-top: 1em;
 		width: 100%;
 	}
-	.page-title, .post-title{
+	.page-title, .entry-title{
 		font-size: 2.2em;
 	}
 	
 	#featured-content .featured-content-left {
 		width: 67.5%;
 	}
-	#featured-content .featured-content-left .type-post .post-content .post-title {
+	#featured-content .featured-content-left .type-post .post-content .entry-title {
 		font-size: 2.0em;
 	}
 	#featured-content .featured-content-right {
@@ -1772,7 +1772,7 @@ embed, iframe, object, video {
 	#featured-content .featured-content-right .type-post .post-content {
 		padding: 0.4em 0.8em;
 	}
-	#featured-content .featured-content-right .type-post .post-content .post-title {
+	#featured-content .featured-content-right .type-post .post-content .entry-title {
 		font-size: 1.0em;
 	}
 	
@@ -1780,13 +1780,13 @@ embed, iframe, object, video {
 	#widget-category-posts-boxed .large-post .more-link  {
 		display: inline-block;
 	}
-	.widget-category-posts .large-post .post-title {
+	.widget-category-posts .large-post .entry-title {
 		font-size: 1.7em;
 	}
-	.widget-category-posts .medium-post .post-title {
+	.widget-category-posts .medium-post .entry-title {
 		font-size: 1.3em;
 	}
-	.widget-category-posts .small-post .post-title {
+	.widget-category-posts .small-post .entry-title {
 		font-size: 1.1em;
 	}
 }
@@ -2129,7 +2129,7 @@ embed, iframe, object, video {
 	#logo .site-title {
 		font-size: 2.4em;
 	}
-	.page-title, .post-title{
+	.page-title, .entry-title{
 		font-size: 2.1em;
 	}
 	.postmeta .meta-comments {
@@ -2178,27 +2178,27 @@ embed, iframe, object, video {
 		box-sizing: border-box;
 	}
 
-	#featured-content .featured-content-right .type-post .post-content .post-title {
+	#featured-content .featured-content-right .type-post .post-content .entry-title {
 		font-size: 1.2em;
 	}
 	
 	#widget-category-posts-boxed .large-post .more-link  {
 		display: none;
 	}
-	.widget-category-posts .large-post .post-title {
+	.widget-category-posts .large-post .entry-title {
 		font-size: 1.5em;
 	}
-	.widget-category-posts .medium-post .post-title {
+	.widget-category-posts .medium-post .entry-title {
 		font-size: 1.15em;
 	}
-	.widget-category-posts .small-post .post-title {
+	.widget-category-posts .small-post .entry-title {
 		font-size: 1.0em;
 	}
 }
 
 @media only screen and (max-width: 45em) {
 	
-	.widget-category-posts .small-post .post-title {
+	.widget-category-posts .small-post .entry-title {
 		border: none;
 	}
 	.widget-category-posts .small-post .postmeta {
@@ -2219,7 +2219,7 @@ embed, iframe, object, video {
 	.type-post, .type-page, .type-attachment, .widget  {
 		margin: 0 0 1.2em 0;
 	}
-	.page-title, .post-title{
+	.page-title, .entry-title{
 		font-size: 2.0em;
 	}
 	#featured-content {
@@ -2235,7 +2235,7 @@ embed, iframe, object, video {
 		padding-right: 1em;
 	}
 	
-	#featured-content .featured-content-left .type-post .post-content .post-title {
+	#featured-content .featured-content-left .type-post .post-content .entry-title {
 		font-size: 1.8em;
 		border: none;
 	}
@@ -2249,7 +2249,7 @@ embed, iframe, object, video {
 	#featured-content .featured-content-right .type-post .post-content {
 		padding: 0.3em 0.6em;
 	}
-	#featured-content .featured-content-right .type-post .post-content .post-title {
+	#featured-content .featured-content-right .type-post .post-content .entry-title {
 		font-size: 1.0em;
 	}
 	
@@ -2283,7 +2283,7 @@ embed, iframe, object, video {
 	#widget-category-posts-boxed .large-post .more-link  {
 		display: inline-block;
 	}
-	.widget-category-posts .large-post .post-title {
+	.widget-category-posts .large-post .entry-title {
 		font-size: 1.7em;
 	}
 	.widget-category-posts .medium-post {
@@ -2301,7 +2301,7 @@ embed, iframe, object, video {
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
 	}
-	.widget-category-posts .medium-post .post-title {
+	.widget-category-posts .medium-post .entry-title {
 		font-size: 1.3em;
 	}
 	.widget-category-posts .small-post .small-post-image {
@@ -2311,7 +2311,7 @@ embed, iframe, object, video {
 		width: 75%;
 		padding-top: 0.3em;
 	}
-	.widget-category-posts .small-post .post-title {
+	.widget-category-posts .small-post .entry-title {
 		font-size: 1.1em;
 		border-bottom: 3px solid #1188cc;
 	}
@@ -2337,7 +2337,7 @@ embed, iframe, object, video {
 	#logo .site-title {
 		font-size: 2.2em;
 	}
-	.page-title, .post-title{
+	.page-title, .entry-title{
 		font-size: 1.8em;
 	}
 	.alignright, .alignleft {
@@ -2369,7 +2369,7 @@ embed, iframe, object, video {
 	#featured-content .featured-content-left .type-post .post-content {
 		padding: 0.3em 0.6em;
 	}
-	#featured-content .featured-content-left .type-post .post-content .post-title {
+	#featured-content .featured-content-left .type-post .post-content .entry-title {
 		font-size: 1.5em;
 	}
 
@@ -2426,13 +2426,13 @@ embed, iframe, object, video {
 	}
 	
 	/* Magazine Homepage: Category Post Widgets */
-	.widget-category-posts .large-post .post-title {
+	.widget-category-posts .large-post .entry-title {
 		font-size: 1.5em;
 	}
-	.widget-category-posts .medium-post .post-title {
+	.widget-category-posts .medium-post .entry-title {
 		font-size: 1.15em;
 	}
-	.widget-category-posts .small-post .post-title {
+	.widget-category-posts .small-post .entry-title {
 		font-size: 1.0em;
 	}
 	
@@ -2451,7 +2451,7 @@ embed, iframe, object, video {
 
 @media only screen and (max-width: 25em) {
 
-	.widget-category-posts .small-post .post-title {
+	.widget-category-posts .small-post .entry-title {
 		border: none;
 	}
 	.widget-category-posts .small-post .postmeta {
@@ -2488,7 +2488,7 @@ embed, iframe, object, video {
 	#mainnav-toggle:after {
 		font-size: 20px;
 	}
-	.page-title, .post-title {
+	.page-title, .entry-title {
 		font-size: 1.6em;
 	}
 	.postmeta span, .postinfo span {
@@ -2508,17 +2508,17 @@ embed, iframe, object, video {
 		padding-right: 0.5em;
 	}
 	
-	#featured-content .featured-content-left .type-post .post-content .post-title {
+	#featured-content .featured-content-left .type-post .post-content .entry-title {
 		font-size: 1.2em;
 	}
 	
-	.widget-category-posts .large-post .post-title {
+	.widget-category-posts .large-post .entry-title {
 		font-size: 1.4em;
 	}
-	.widget-category-posts .medium-post .post-title {
+	.widget-category-posts .medium-post .entry-title {
 		font-size: 1.1em;
 	}
-	.widget-category-posts .small-post .post-title {
+	.widget-category-posts .small-post .entry-title {
 		font-size: 0.95em;
 	}
 }
