added support for ThemeZee Breadcrumbs plugin

--- a/style.css
+++ b/style.css
@@ -813,6 +813,40 @@ input, textarea, select {
 	border: 1px solid #1188cc;
 }
 
+/* Breadcrumbs */
+.breadcrumbs {
+	margin-bottom: 1em;
+	color: #777;
+}
+.archive .breadcrumbs, .search .breadcrumbs, .template-magazine .breadcrumbs {
+	margin-bottom: 1.5em;
+}
+.breadcrumbs .trail-browse,
+.breadcrumbs .trail-items,
+.breadcrumbs .trail-items li {
+	display: inline;
+	line-height: 1.4;
+}
+.breadcrumbs .trail-browse {
+	margin-right: 0.5em;
+}
+.breadcrumbs .trail-items {
+	list-style: none;
+}
+.breadcrumbs .trail-items li::after {
+	content: "\00bb"; /* Raquo */
+	padding: 0 0.5em;
+}
+.trail-separator-slash .trail-items li::after { content: "\002F"; }
+.trail-separator-dash .trail-items li::after { content: "\2013"; }
+.trail-separator-bull .trail-items li::after { content: "\2022"; }
+.trail-separator-arrow-bracket .trail-items li::after { content: "\003e"; }
+.trail-separator-raquo .trail-items li::after { content: "\00bb"; }
+.trail-separator-single-arrow .trail-items li::after { content: "\2192"; }
+.trail-separator-double-arrow .trail-items li::after { content: "\21D2"; }
+.breadcrumbs .trail-items li:last-of-type::after {
+	display: none;
+}
 
 /* Text Elements
 -------------------------------------------------------------- */
