--- a/style.css
+++ b/style.css
@@ -670,46 +670,46 @@ input, textarea, select {
 }
 
 /* Postmeta */
-.postmeta {
+.entry-meta {
 	color: #222;
 	font-size: 0.85em;
 	line-height: 1.5em;
 	padding: 1em 0.5em 0.8em;
 	border-bottom: 2px solid #ddd;
 }
-.postmeta span {
+.entry-meta span {
 	margin-right: 1em;
 }
-.postmeta .meta-comments {
+.entry-meta .meta-comments {
 	float: right;
 	margin-right: 0;
 }
-.postmeta a:link, .postmeta a:visited {
+.entry-meta a:link, .entry-meta a:visited {
 	color: #333;
 }
-.postmeta a:hover, .postmeta a:active {
+.entry-meta a:hover, .entry-meta a:active {
 	color: #1188cc;
 	text-decoration: none;
 }
 
 /* Postmeta Icons */
-.postmeta span:before {
+.entry-meta span:before {
 	display: inline-block;
 	-webkit-font-smoothing: antialiased;
 	font: normal 20px 'Genericons';
 	vertical-align: top;
 	color: #555;
 }
-.postmeta .meta-date:before{
+.entry-meta .meta-date:before{
 	content: '\f307';
 }
-.postmeta .meta-author:before{
+.entry-meta .meta-author:before{
 	content: '\f304';
 }
-.postmeta .meta-category:before{
+.entry-meta .meta-category:before{
 	content: '\f301';
 }
-.postmeta .meta-comments:before{
+.entry-meta .meta-comments:before{
 	content: '\f300';
 }
 
@@ -1450,20 +1450,20 @@ embed, iframe, object, video {
 #featured-content .type-post .post-content .entry-title a:hover, #featured-content .type-post .post-content .entry-title a:active{
 	color: #ddd;
 }
-#featured-content .type-post .post-content .postmeta {
+#featured-content .type-post .post-content .entry-meta {
 	border-bottom: none;
 	color: #eee;
 	text-shadow: 1px 1px 5px #000;
 	padding-left: 0;
 }
-#featured-content .type-post .post-content .postmeta span:before {
+#featured-content .type-post .post-content .entry-meta span:before {
 	color: #fff;
 	text-shadow: 1px 1px 5px #000;
 }
-#featured-content .type-post .post-content .postmeta a:link, #featured-content .type-post .post-content .postmeta a:visited {
+#featured-content .type-post .post-content .entry-meta a:link, #featured-content .type-post .post-content .entry-meta a:visited {
 	color: #eee;
 }
-#featured-content .type-post .post-content .postmeta a:hover, #featured-content .type-post .post-content .postmeta a:active{
+#featured-content .type-post .post-content .entry-meta a:hover, #featured-content .type-post .post-content .entry-meta a:active{
 	color: #ddd;
 }
 #featured-content .featured-content-right .type-post .post-content {
@@ -1532,14 +1532,14 @@ embed, iframe, object, video {
 .widget-category-posts .medium-post .entry-title {
 	font-size: 1.25em;
 }
-.widget-category-posts .medium-post .postmeta, .widget-category-posts .small-post .postmeta {
+.widget-category-posts .medium-post .entry-meta, .widget-category-posts .small-post .entry-meta {
 	font-size: 0.75em;
 	padding: 0.7em 0.3em 0.5em;
 }
-.widget-category-posts .medium-post .postmeta span, .widget-category-posts .small-post .postmeta span {
+.widget-category-posts .medium-post .entry-meta span, .widget-category-posts .small-post .entry-meta span {
 	margin-right: 0.5em;
 }
-.widget-category-posts .medium-post .postmeta .meta-comments, .widget-category-posts .small-post .postmeta .meta-comments {
+.widget-category-posts .medium-post .entry-meta .meta-comments, .widget-category-posts .small-post .entry-meta .meta-comments {
 	float: none;
 }
 .widget-category-posts .small-post {
@@ -1568,7 +1568,7 @@ embed, iframe, object, video {
 .widget-category-posts .small-post .entry-title {
 	font-size: 1.1em;
 }
-.widget-category-posts .small-post .postmeta {
+.widget-category-posts .small-post .entry-meta {
 	display: inline-block;
 	margin: 0.4em 0 0;
 	border: none;
@@ -2172,7 +2172,7 @@ embed, iframe, object, video {
 	.page-title, .entry-title{
 		font-size: 2.1em;
 	}
-	.postmeta .meta-comments {
+	.entry-meta .meta-comments {
 		float: none;
 		font-weight: normal;
 	}
@@ -2241,7 +2241,7 @@ embed, iframe, object, video {
 	.widget-category-posts .small-post .entry-title {
 		border: none;
 	}
-	.widget-category-posts .small-post .postmeta {
+	.widget-category-posts .small-post .entry-meta {
 		display: none;
 	}
 	
@@ -2282,7 +2282,7 @@ embed, iframe, object, video {
 	#featured-content .featured-content-left .type-post .post-content {
 		padding: 0.5em 1em;
 	}
-	#featured-content .featured-content-left .type-post .post-content .postmeta {
+	#featured-content .featured-content-left .type-post .post-content .entry-meta {
 		display: none;
 	}
 
@@ -2355,7 +2355,7 @@ embed, iframe, object, video {
 		font-size: 1.1em;
 		border-bottom: 3px solid #1188cc;
 	}
-	.widget-category-posts .small-post .postmeta {
+	.widget-category-posts .small-post .entry-meta {
 		display: inline-block;
 	}
 	
@@ -2494,7 +2494,7 @@ embed, iframe, object, video {
 	.widget-category-posts .small-post .entry-title {
 		border: none;
 	}
-	.widget-category-posts .small-post .postmeta {
+	.widget-category-posts .small-post .entry-meta {
 		display: none;
 	}
 
@@ -2531,7 +2531,7 @@ embed, iframe, object, video {
 	.page-title, .entry-title {
 		font-size: 1.6em;
 	}
-	.postmeta span, .postinfo span {
+	.entry-meta span, .postinfo span {
 		display: block;
 	}
 	
