--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Glades
 Theme URI: http://themezee.com/themes/glades/
 Description: Glades is a modern Magazine Theme for a local news or any other content focused website. The magazine-styled homepage is built with WordPress core features like Customizer and Widgets, which makes the setup super fast, flexible and easy. The theme comes with a beautiful Featured Content area and responsive design, looking great on every device.
-Version: 1.1.4
+Version: 1.1.5
 Author: ThemeZee
 Author URI: http://themezee.com
 Tags: two-columns, light, blue, custom-background, custom-header, custom-menu, editor-style, featured-image-header, featured-images, flexible-header, custom-colors, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, red, silver, white, green, gray
@@ -782,6 +782,12 @@ input, textarea, select {
 	background: #1188cc;
 	border-bottom: 2px solid #fff;
 	padding: 0.5em 0.8em;
+}
+.archive-description {
+	margin: -2rem 0 2rem;
+	padding: 1em 0 0;
+	line-height: 1.7;
+	color: #444;
 }
 
 /* Theme Pagination */
