--- a/css/themezee-widget-bundle.css
+++ b/css/themezee-widget-bundle.css
@@ -75,8 +75,10 @@
 
 .tzwb-posts-list .tzwb-entry-meta {
 	margin: 0.1em 0 0;
+	padding: 0;
 	font-size: 0.85em;
 	color: #888;
+	border-bottom: none;
 }
 
 .tzwb-posts-list .tzwb-entry-meta span {
