added selected refresh and live preview to site title and tagline settings

--- a/css/customizer.css
+++ b/css/customizer.css
@@ -7,6 +7,10 @@
     margin-bottom: 4px;
 }
 
+#customize-control-glades_theme_options-header_tagline {
+	margin-bottom: 16px;
+}
+
 #customize-control-glades_control_default_fonts,
 #customize-control-glades_control_postmeta_headline,
 #customize-control-glades_control_post_footer_headline {
