--- a/css/custom-fonts.css
+++ b/css/custom-fonts.css
@@ -12,6 +12,7 @@
     font-family: 'PT Sans';
     font-style: normal;
     font-weight: 400;
+	font-display: swap;
     src: local('PT Sans'), local('PTSans-Regular'),
         url('../fonts/pt-sans-v9-latin-ext_latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/pt-sans-v9-latin-ext_latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -22,6 +23,7 @@
     font-family: 'PT Sans';
     font-style: normal;
     font-weight: 700;
+	font-display: swap;
     src: local('PT Sans Bold'), local('PTSans-Bold'),
         url('../fonts/pt-sans-v9-latin-ext_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/pt-sans-v9-latin-ext_latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -32,6 +34,7 @@
     font-family: 'PT Sans';
     font-style: italic;
     font-weight: 400;
+	font-display: swap;
     src: local('PT Sans Italic'), local('PTSans-Italic'),
         url('../fonts/pt-sans-v9-latin-ext_latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/pt-sans-v9-latin-ext_latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -42,6 +45,7 @@
     font-family: 'PT Sans';
     font-style: italic;
     font-weight: 700;
+	font-display: swap;
     src: local('PT Sans Bold Italic'), local('PTSans-BoldItalic'),
         url('../fonts/pt-sans-v9-latin-ext_latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/pt-sans-v9-latin-ext_latin-700italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -52,6 +56,7 @@
     font-family: 'Contrail One';
     font-style: normal;
     font-weight: 400;
+	font-display: swap;
     src: local('Contrail One'), local('ContrailOne-Regular'),
         url('../fonts/contrail-one-v7-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/contrail-one-v7-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
