--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ Theme Name: Glades
 Theme URI: https://themezee.com/themes/glades/
 Description: Glades is a modern Magazine Theme for a local news or any other content focused website. The magazine-styled homepage is built with WordPress core features like Customizer and Widgets, which makes the setup super fast, flexible and easy. The theme comes with a beautiful Featured Content area and responsive design, looking great on every device.
 Version: 1.4.5
+Requires at least: 5.2
+Tested up to: 5.8
+Requires PHP: 5.6
 Author: ThemeZee
 Author URI: https://themezee.com
 Tags: two-columns, custom-background, custom-header, custom-menu, editor-style, rtl-language-support, blog, news, featured-image-header, featured-images, flexible-header, custom-colors, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, one-column, left-sidebar, right-sidebar, three-columns
